# AlgorithmicTradingBacktester

./: .clang-tidy  .gitignore  .markdownlint.yaml  AGENTS.md  CMakeLists.txt  CMakeLists.txt.test  LICENSE  Makefile  README.md  main.cpp
.github/workflows/: ci.yml  discord-closed-pr-notify.yml  discord-review-pr-notify.yml
docs/: build_guide.md
docs/modules/: README.md  backtesting_engine.md  data_acquisition.md  strategy_translator.md  structure_summary.md  user_interface.md
docs/plan/: ARCHITECTUREPLAN.md
docs/plans/: architecture.md  feature_set.md  workflow.md
docs/plans/proposals/: architecture.md  feature_set.md  workflow.md
docs/templates/: IndicatorTemplate.cpp  IndicatorTemplate.h
src/: main.cpp
src/core/: AppInfo.cpp  AppInfo.h  app_info.cpp  app_info.h
src/data/cache/: DataCache.h  data_cache.cpp  data_cache.h
src/data/models/: bar.h  tick.cpp  tick.h
src/data/parsers/: csv_parser.cpp  csv_parser.h  json_parser.cpp  json_parser.h
src/logic/engine/: backtest_engine.cpp  backtest_engine.h  simulation_loop.cpp  simulation_loop.h
src/logic/events/: event_handler.cpp  event_handler.h
src/logic/metrics/: performance_metrics.cpp  performance_metrics.h
src/logic/strategies/: strategy_base.cpp  strategy_base.h
src/strategy/conditions/: condition_base.cpp  condition_base.h
src/strategy/indicators/: ema.cpp  ema.h  sma.cpp  sma.h
src/strategy/parser/: rule_parser.cpp  rule_parser.h
src/strategy/translator/: rule_translator.cpp  rule_translator.h
tests/: AppInfoTests.cpp  app_info_tests.cpp
tests/data/: DataCacheTests.cpp  data_cache_tests.cpp
tests/data/parsers/: CSVParserTests.cpp  csv_parser_tests.cpp
tests/logic/engine/: BacktestEngineTests.cpp
tests/logic/metrics/: PerformanceMetricsTests.cpp  performance_metrics_tests.cpp
tests/strategy/indicators/: SMATests.cpp  sma_tests.cpp
tests/strategy/parser/: RuleParserTests.cpp  rule_parser_tests.cpp
tests/ui/: StrategyBuilderWidgetTests.cpp  strategy_builder_widget_tests.cpp
tests/ui/charts/: CandlestickChartTests.cpp
ui/: MainWindow.cpp  MainWindow.h
ui/charts/: candlestick_chart.cpp  candlestick_chart.h  equity_curve_chart.cpp  equity_curve_chart.h
ui/dashboard/: dashboard_widget.cpp  dashboard_widget.h
ui/settings/: settings_widget.cpp  settings_widget.h
ui/strategy_builder/: strategy_builder_widget.cpp  strategy_builder_widget.h
ui/widgets/: custom_widgets.cpp  custom_widgets.h
